PossetInterpreter/src/test/resources/syntax-errors/different-number-of-restriction-values-compared-to-restriction-headers.pos
main
(
	InitialTape t;
)

InitialTape
(
	Tape t (
		c2 (
			d1(d1[A];d2[B];)
			d2(d1[C];d2[D];)
			d3(d1[E];d2[F];)
		)
	)
)
{
	/* The number of restriction headers is smaller than the number of restriction values. */
	(A,B,C)
	(#1,#1,#1,#1,#1,#1)
}